#scrapper :: empty ad listing page will raise an exception